[project]
name = "adownloader-rich"
version = "0.1.0"
authors = [{email = "zceemja@ucl.ac.uk"}]
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
license-files = ["LICENSE"]
description = "Python Async File Downloader"
requires-python = ">=3.11"
keywords = ["download", "python", "rich", "async"]
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.18",
    "rich>=14.0.0",
    "rich-argparse>=1.7.0",
]

[project.urls]
Repository = "https://github.com/zceemja/adownloader.git"

[project.scripts]
adownloader = "adownloader:main"